SERVER-37722 Check for quiet flag when logging connection end message